--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "archi-gradshow-2023",
-  "homepage": "https://bitterapple0.github.io/archi-gradshow-2023/",
+  "homepage": "https://asdgradshow2023.github.io/perspectives/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
