--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "archi-gradshow-2023",
+  "name": "perspectives",
   "homepage": "https://asdgradshow2023.github.io/perspectives/",
   "version": "0.1.0",
   "private": true,
